added custom requestpredicate for matching all hosts, improved routing regex pattern, STATIC routing uses better path matching strategy and checks if file exists